Fitting Multiple Linear Regression

--- a/Multiple Linear Regression.ipynb
+++ b/Multiple Linear Regression.ipynb
@@ -724,11 +724,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Results:\n",
+    "With each additional unit increase in area of house, the price is expected to increase by 345.9 as long as all other variables remain same\n",
+    "\n",
+    "Smaller p-values suggest that these values are statistacally significant in relating to the response variable"
+   ]
   }
  ],
  "metadata": {
